# fishros2

chart2/chapt2_ws/install/: local_setup.sh  setup.sh
chart2/chapt2_ws/install/demo_python_pkg/share/demo_python_pkg/: package.dsv  package.ps1  package.sh  package.xml
chart2/chapt2_ws/log/: latest_build
chart2/chapt2_ws/src/demo_python_pkg/: package.xml  setup.py
chart2/chapt2_ws/src/demo_python_pkg/demo_python_pkg/: learn_thread.py  person_node.py
chart2/chapt2_ws/src/install/: local_setup.sh  setup.sh
chart2/chapt2_ws/src/install/demo_python_pkg/lib/demo_python_pkg/: py_node
chart2/chapt2_ws/src/install/demo_python_pkg/share/demo_python_pkg/: package.sh
chart2/chapt2_ws/src/log/: latest_build
chart3/topic_ws/install/: local_setup.sh  setup.sh
chart3/topic_ws/install/demo_python_topic/share/demo_python_topic/: package.sh
chart3/topic_ws/log/: latest_build
chart3/topic_ws/src/demo_python_topic/: package.xml  setup.py
chart3/topic_ws/src/demo_python_topic/demo_python_topic/: novel_pub_node.py  novel_sub_node.py
chart4/chapt4_ws/install/: local_setup.sh  setup.sh
chart4/chapt4_ws/install/chapt4_interfaces/share/ament_index/resource_index/parent_prefix_path/: chapt4_interfaces
chart4/chapt4_ws/install/chapt4_interfaces/share/chapt4_interfaces/: local_setup.sh  package.sh
chart4/chapt4_ws/install/demo_cpp_service/lib/demo_cpp_service/: patrol_client  turtle_control
chart4/chapt4_ws/install/demo_cpp_service/share/ament_index/resource_index/parent_prefix_path/: demo_cpp_service
chart4/chapt4_ws/install/demo_cpp_service/share/demo_cpp_service/: package.sh
chart4/chapt4_ws/install/demo_python_service/share/demo_python_service/: package.sh
chart4/chapt4_ws/log/: latest_build
chart4/chapt4_ws/src/chapt4_interfaces/: CMakeLists.txt
chart4/chapt4_ws/src/demo_python_service/: setup.py
