
<?xml version="1.0"?>
<!-- 指定XML版本 -->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- 引入ROS 2的包格式规范，确保包描述文件的正确性 -->

<package format="3">
  <!-- 定义包的格式版本 -->
  <name>demo_python_pkg</name>
  <!-- 包的名称 -->
  <version>0.0.0</version>
  <!-- 包的当前版本 -->
  <description>TODO: Package description</description>
  <!-- 包的描述，TODO提示开发者需要填写具体的描述信息 -->
  <maintainer email="xiaomi@todo.todo">xiaomi</maintainer>
  <!-- 包的维护者信息，包括名字和邮箱 -->
  <license>Apache-2.0</license>
  <!-- 包使用的许可证类型 -->

  <depend>rclpy</depend>
  <!-- 运行时依赖，rclpy是ROS 2为Python提供的客户端库 -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <!-- 测试依赖，用于确保代码质量、格式和版权信息的正确性 -->

  <export>
    <build_type>ament_python</build_type>
    <!-- 指定构建类型，这里使用ament_python，适用于Python编写的ROS 2包 -->
  </export>
</package>